# myan

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  English Academic Vocabulary.txt  apply_gloss_and_inject_report.md  pyproject.toml  requirements.txt  skipped_hashes.txt  update_anki_deck.py
data/: README.md  _sense_span_audit.csv  _span_content_enum.txt  _topic_enum_checkpoint.json  _topic_enum_checkpoint_BROKEN_3500files.json  _topic_names_inventory.csv  anki_notes.jsonl  audit_expanded_needs_gloss.jsonl  audit_expanded_needs_gloss_filled.jsonl  audit_full_deck_v2.jsonl  card_identity_dedup_plan.csv  card_identity_dup_audit.csv  gloss_drift_fix_report.md  gloss_precision_phrase_p5.jsonl  manual_gloss_review_p5_decisions.jsonl  needs_pos_split_48.jsonl  oxford5000_vs_bak_pre_inject_20260620_111500_audit.csv  oxford5000_vs_bak_pre_inject_20260620_111500_posset_audit.csv  oxford_labels.json
design/: README.md  index.html
src/: config.py  pipeline.py
tests/: test_config.py  test_drift_guard.py  test_schema_validation.py
tools/: _analyze_gloss_quality.py  _append_fix_trace.py  _apply_card_identity_p2.py  _apply_gloss_hygiene.py  _apply_gloss_p1.py  _apply_opal_to_txt.py  _apply_p15_full_simple_gloss_patch.py  _apply_p4a_coverage_fix.py  _apply_p4b_rule_shape_fix.py  _apply_p4c_policy_review.py  _apply_p5_precision_phrase.py  _apply_p5b_manual_review.py  _apply_p8_convention_hotfix.py  _apply_p9a_def_before_separator_fix.py  _apply_txt_escaped_pipe_p3a.py  _audit_2chunk.py  _audit_gloss_policy_coverage.py  _audit_ox5000_coverage.py  _audit_rule_a.py  (+108 more)
(+363 files in other folders)
