[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ielts-deck"
version = "0.1.0"
description = "IELTS / Academic English Anki deck builder (notes DB + scraper pipeline)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "cssselect>=1.4.0",
    "nltk>=3.9.4",
    "edge-tts>=7.2.8",
    "genanki>=0.13.1",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "data*", "audio*", "report*", "docs*", "design*", "vocab_list*", "handoff*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
# Add the project root to sys.path so `from src.config import ...` works
# in tests, watch_sync.py, and `python -m src.tools.X` invocations.
pythonpath = ["."]
